--- a/pages/account/index.wxml
+++ b/pages/account/index.wxml
@@ -107,6 +107,10 @@
                 <view class="weui-cell__bd">{{ fresnsConfig.menu_follow_posts }}</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </navigator>
+            <navigator url="/pages/hashtags/following" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+                <view class="weui-cell__bd">{{ fresnsConfig.menu_follow_hashtags }}</view>
+                <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+            </navigator>
         </view>
     </block>
 
