--- a/pages/groups/index.wxml
+++ b/pages/groups/index.wxml
@@ -17,7 +17,12 @@
         <view class="content">
             <scroll-view class="section" scroll-y scroll-with-animation show-scrollbar="{{ false }}">
                 <t-cell-group>
-                    <group wx:for="{{ groups }}" wx:for-item="group" group="{{ group }}" currentCategoryGid="{{ currentCategoryGid }}" wx:key="gid"></group>
+                    <block wx:if="{{ currentCategoryIsGroup }}">
+                        <group class="group-list" wx:for="{{ groups }}" wx:for-item="group" wx:key="gid" group="{{ group }}" currentCategoryGid="{{ currentCategoryGid }}"/>
+                    </block>
+                    <block wx:else>
+                        <hashtag class="hashtag-list" wx:for="{{ hashtags }}" wx:for-item="hashtag" wx:key="hid" hashtag="{{ hashtag }}"/>
+                    </block>
                 </t-cell-group>
 
                 <!-- 加载动效 -->
