--- a/pages/portal/channels.wxml
+++ b/pages/portal/channels.wxml
@@ -11,7 +11,7 @@
     </t-navbar>
 
     <t-cell-group theme="card" style="margin-top:20px;margin-bottom:20px;">
-        <t-cell title="赞助我们" leftIcon="money" url="/pages/webview?url=https://docs.fresns.cn/community/sponsor.html" hover arrow/>
+        <t-cell title="赞助我们" leftIcon="money" hover arrow bind:tap="onSponsor"/>
     </t-cell-group>
 
     <t-cell-group theme="card" wx:if="{{ stickyPosts.length > 0 }}" style="margin-bottom:20px;">
@@ -23,20 +23,20 @@
     <view class="sponsor">
         <view class="sponsor-special">
             <navigator wx:for="{{ sponsorData.special || [] }}" url="{{ item.mpUrl }}">
-                <image src="{{ sponsorAsset + item.banner }}" mode="scaleToFill" show-menu-by-longpress="{{ true }}"/>
+                <image src="{{ item.banner }}" mode="scaleToFill" show-menu-by-longpress="{{ true }}"/>
             </navigator>
         </view>
         <t-row gutter="16" class="sponsor-platinum">
             <t-col span="12" wx:for="{{ sponsorData.platinum || [] }}" t-class="sponsor-box">
                 <navigator url="{{ item.mpUrl }}">
-                    <image src="{{ sponsorAsset + item.img }}" mode="scaleToFill" show-menu-by-longpress="{{ true }}"/>
+                    <image src="{{ item.img }}" mode="scaleToFill" show-menu-by-longpress="{{ true }}"/>
                 </navigator>
             </t-col>
         </t-row>
         <t-row gutter="16" class="sponsor-gold">
             <t-col span="8" wx:for="{{ sponsorData.gold || [] }}" t-class="sponsor-box">
                 <navigator url="{{ item.mpUrl }}">
-                    <image src="{{ sponsorAsset + item.img }}" mode="scaleToFill" show-menu-by-longpress="{{ true }}"/>
+                    <image src="{{ item.img }}" mode="scaleToFill" show-menu-by-longpress="{{ true }}"/>
                 </navigator>
             </t-col>
         </t-row>
