--- a/components/user/section/interaction.wxml
+++ b/components/user/section/interaction.wxml
@@ -6,29 +6,29 @@
 <view class="mark-btn">
     <!-- 点赞 -->
     <view wx:if="{{ user.interaction.likeSetting }}" class="weui-btn weui-btn_mini {{ user.interaction.likeStatus ? 'weui-btn_primary' : 'weui-btn_default' }}" bind:tap="onClickUserLike">
-        <image wx:if="{{ !user.interaction.likeStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.like }}"></image>
-        <image wx:if="{{ user.interaction.likeStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.likeActive }}"></image>
+        <image wx:if="{{ !user.interaction.likeStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.like }}"/>
+        <image wx:if="{{ user.interaction.likeStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.likeActive }}"/>
         {{ user.stats.likeMeCount ? user.stats.likeMeCount : '' }}
     </view>
 
     <!-- 点踩 -->
     <view wx:if="{{ user.interaction.dislikeSetting }}" class="weui-btn weui-btn_mini {{ user.interaction.dislikeStatus ? 'weui-btn_primary' : 'weui-btn_default' }}" bind:tap="onClickUserDislike">
-        <image wx:if="{{ !user.interaction.dislikeStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.dislike }}"></image>
-        <image wx:if="{{ user.interaction.dislikeStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.dislikeActive }}"></image>
+        <image wx:if="{{ !user.interaction.dislikeStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.dislike }}"/>
+        <image wx:if="{{ user.interaction.dislikeStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.dislikeActive }}"/>
         {{ user.stats.dislikeMeCount ? user.stats.dislikeMeCount : '' }}
     </view>
 
     <!-- 关注 -->
     <view wx:if="{{ user.interaction.followSetting }}" class="weui-btn weui-btn_mini {{ user.interaction.followStatus ? 'weui-btn_primary' : 'weui-btn_default' }}" bind:tap="onClickUserFollow">
-        <image wx:if="{{ !user.interaction.followStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.follow }}"></image>
-        <image wx:if="{{ user.interaction.followStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.followActive }}"></image>
-        {{ user.stats.followMeCount ? user.stats.followMeCount : '' }}
+        <image wx:if="{{ !user.interaction.followStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.follow }}"/>
+        <image wx:if="{{ user.interaction.followStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.followActive }}"/>
+        {{ user.interaction.followStatus ? '已' : '' }}{{ user.interaction.followName }}
     </view>
 
     <!-- 屏蔽 -->
     <view wx:if="{{ user.interaction.blockSetting }}" class="weui-btn weui-btn_mini {{ user.interaction.blockStatus ? 'weui-btn_primary' : 'weui-btn_default' }}" bind:tap="onClickUserBlock">
-        <image wx:if="{{ !user.interaction.blockStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.block }}"></image>
-        <image wx:if="{{ user.interaction.blockStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.blockActive }}"></image>
+        <image wx:if="{{ !user.interaction.blockStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.block }}"/>
+        <image wx:if="{{ user.interaction.blockStatus }}" class="weui-btn_cell__icon" src="{{ buttonIcons.blockActive }}"/>
         {{ user.stats.blockMeCount ? user.stats.blockMeCount : '' }}
     </view>
 </view>
