--- a/components/comment/comment.wxml
+++ b/components/comment/comment.wxml
@@ -20,7 +20,7 @@
         <!-- 评论内容 -->
         <view bind:tap="onClickToDetail">
             <view class="fresns-content">
-                <view class="content-text">
+                <view class="content-text {{ (type == 'list') ? 'list-content' : '' }}">
                     <mp-html content="{{ commentContent }}" markdown="{{ true }}" lazy-load="true" selectable="{{ true }}" bind:linktap="onClickContentLink"/>
                 </view>
 
