--- a/components/post/post.wxml
+++ b/components/post/post.wxml
@@ -23,11 +23,11 @@
                 <text>{{ post.title }}</text>
             </view>
 
-            <view class="content-text">
+            <view class="content-text {{ (type == 'list') ? 'list-content' : '' }}">
                 <mp-html content="{{ postContent }}" markdown="{{ true }}" lazy-load="{{ true }}" selectable="{{ true }}" bind:linktap="onClickContentLink"/>
             </view>
 
-            <view class="content-brief" wx:if="{{ type == 'list' && post.isBrief }}">
+            <view class="content-brief" wx:if="{{ type != 'detail' && post.isBrief }}">
                 <navigator class="navigator-inline" url="/pages/posts/detail?pid={{ post.pid }}">全文</navigator>
             </view>
         </view>
