--- a/components/user/profile.wxss
+++ b/components/user/profile.wxss
@@ -61,6 +61,19 @@
   margin-top: 6px;
 }
 
+.profile-gender {
+  margin-left: 10px;
+  margin-top: 8px;
+}
+
+.profile-gender-male {
+  color: var(--weui-BLUE);
+}
+
+.profile-gender-female {
+  color: var(--weui-RED);
+}
+
 .profile-role-icon image {
   height: 18px;
   margin: 0 4px;
