--- a/pages/portal/about.wxml
+++ b/pages/portal/about.wxml
@@ -59,6 +59,6 @@
     </view>
 
     <view class="client-version">
-        <text>小程序版本 v{{ clientVersion }}</text>
+        <text>客户端版本 v{{ clientVersion }}</text>
     </view>
 </view>
