--- a/pages/account/index.wxml
+++ b/pages/account/index.wxml
@@ -143,10 +143,21 @@
         </view>
         <block wx:if="{{ appInfo.hasNewVersion }}">
             <view class="weui-cell weui-cell_access" wx:if="{{ appInfo.isApp }}" bind:tap="onUpdateApp">
-                <view class="weui-cell__bd">{{ fresnsLang.checkVersion }}</view>
-                <view class="weui-cell__ft weui-cell__ft_in-access">
-                    <text class="weui-badge">{{ fresnsLang.update }}</text>
+                <view class="weui-cell__bd">
+                    {{ fresnsLang.checkVersion }}
+                    <text class="weui-badge">1</text>
                 </view>
+                <view class="weui-cell__ft weui-cell__ft_in-access">
+                    <view class="weui-btn weui-btn_mini weui-btn_default weui-wa-hotarea" aria-role="button" wx:if="{{ !downloadApk }}">{{ fresnsLang.upgrade }}</view>
+                    <text wx:if="{{ downloadApk }}">{{ downloadTotalWritten }}M/{{ downloadTotalExpectedToWrite }}M</text>
+                </view>
+            </view>
+            <!-- 下载进度条 -->
+            <view class="weui-progress" wx:if="{{ downloadApk }}">
+                <view class="weui-progress__bar">
+                    <view class="weui-progress__inner-bar js_progress" style="width: {{ downloadProgress }}%;"></view>
+                </view>
+                <text id="js_current" class="weui-hidden_abs" aria-role="alert">{{ downloadProgress }}%</text>
             </view>
         </block>
         <block wx:else>
