--- a/components/post/section/interaction.wxml
+++ b/components/post/section/interaction.wxml
@@ -71,7 +71,7 @@
     <!-- 评论框 -->
     <view wx:if="{{ showCommentBox }}" aria-role="dialog" aria-modal="true" aria-labelledby="js_dialog_title">
         <view class="weui-mask {{ showCommentBox ? 'weui-animate_fade-in' : 'weui-animate_fade-out'}}" bind:tap="eventCommentBoxHide"></view>
-        <view class="weui-half-screen-dialog {{ showCommentBox ? 'weui-animate_slide-up' : 'weui-animate_slide-down'}}" style="bottom:{{ commentBoxBottom }}rpx !important;">
+        <view class="weui-half-screen-dialog {{ showCommentBox ? 'weui-animate_slide-up' : 'weui-animate_slide-down'}}" style="{{ commentDialogFullScreen ? 'height: 100%;': ('bottom:' + commentBoxBottom + 'rpx !important;') }}">
             <view class="weui-half-screen-dialog__hd">
                 <view class="weui-half-screen-dialog__hd__side" bind:tap="eventCommentBoxHide">
                     <mp-icon icon="close" size="{{ 24 }}"/>
@@ -81,7 +81,7 @@
                 </view>
             </view>
             <view class="weui-half-screen-dialog__bd">
-                <comment-box pid="{{ post.pid }}" cid="" nickname="{{ nickname }}" bind:eventCommentBoxHide="eventCommentBoxHide" bind:eventCommentBoxHeight="eventCommentBoxHeight"/>
+                <comment-box pid="{{ post.pid }}" cid="" nickname="{{ nickname }}" bind:eventCommentBoxHide="eventCommentBoxHide" bind:eventCommentBoxHeight="eventCommentBoxHeight" bind:eventCommentDialogFullScreen="eventCommentDialogFullScreen"/>
             </view>
         </view>
     </view>
