--- a/pages/portal/about.wxml
+++ b/pages/portal/about.wxml
@@ -10,7 +10,7 @@
         </view>
         <view class="page__title">知结介绍</view>
         <view class="page__desc">知结是一个互联网从业者的资讯社区，由开源程序 Fresns 驱动，有网站、微信小程序、iOS App 和 Android App 全端产品。</view>
-        <view class="page__desc">知结社区聚合了职业、产品、行业、公司和人物等互联网领域的各类资讯，通过圈子和话题进行分门别类，用户可以关注用户、加入圈子、订阅话题等三种方式，将自己感兴趣的领域信息聚合到自己的时间线列表精选阅读（只有精选内容才会进入关注的信息流）。</view>
+        <view class="page__desc">知结社区聚合了职业、产品、行业、公司和人物等互联网领域的各类资讯，通过圈子和话题将信息分门别类，用户可以关注用户、加入圈子、订阅话题等三种方式，将自己感兴趣的领域信息聚合到自己的时间线列表精选阅读（只有精选内容才会进入关注的信息流）。</view>
         <view class="page__desc">知结的目标是信息降噪、高效阅读、主动式筛选，让我们每天刷几分钟就能知道科技圈的大小事。</view>
     </view>
 
@@ -63,4 +63,7 @@
     <view class="client-version">
         <text>客户端版本 v{{ clientVersion }}</text>
     </view>
+
+    <!-- 隐私授权 -->
+    <privacy showPrivacy="{{ showPrivacy }}"/>
 </view>
