cosm: profile more button

--- a/components/user/profile.wxml
+++ b/components/user/profile.wxml
@@ -36,6 +36,10 @@
 
         <view class="weui-flex__item profile-btn">
             <interaction user="{{ user }}"></interaction>
+
+            <view wx:if="{{ actionGroups.length > 0 }}" class="weui-btn weui-btn_mini weui-btn_default" bind:tap="onClickMore">
+                <image class="weui-btn_cell__icon" src="{{ buttonIcons.more }}" style="margin-right: -1px;"/>
+            </view>
         </view>
     </view>
 
@@ -60,10 +64,6 @@
 
         <view class="weui-media-box__info__meta weui-media-box__info__meta_extra">
             <navigator url="/pages/profile/interactions/followers?fsid={{ user.fsid }}" style="color: var(--weui-LINK);">{{ user.stats.followMeCount }} {{ userFollowerName }}</navigator>
-        </view>
-
-        <view class="weui-media-box__info__meta weui-media-box__info__meta_extra" wx:if="{{ actionGroups.length > 0 }}" bind:tap="onClickMore">
-            <image class="weui-btn_cell__icon" src="{{ buttonIcons.more }}"/>
         </view>
     </view>
 
