--- a/components/group/group.wxml
+++ b/components/group/group.wxml
@@ -9,7 +9,7 @@
             {{ group.postCount }} {{ postName }} <text style="margin: 0 5px;">|</text> {{ group.postDigestCount }} {{ digestName }}
         </view>
         <view slot="note" wx:if="{{ currentCategoryGid != 'fresns-my-groups' }}">
-            <t-button size="extra-small" variant="{{ group.interaction.followStatus ? '' : 'outline' }}" content="{{ group.interaction.followStatus ? '已' : '' }}{{ group.interaction.followName }}" bind:tap="onClickGroupFollow" data-gid="{{ group.gid }}"/>
+            <t-button size="extra-small" variant="{{ group.interaction.followStatus ? '' : 'outline' }}" content="{{ group.interaction.followStatus ? modifierCompleted : '' }}{{ group.interaction.followName }}" bind:tap="onClickGroupFollow" data-gid="{{ group.gid }}"/>
         </view>
     </t-cell>
     <view class="group-description">
