--- a/components/hashtag/hashtag.wxml
+++ b/components/hashtag/hashtag.wxml
@@ -5,6 +5,6 @@
 * -->
 <t-cell title="{{ hashtag.hname }}" description="{{ hashtag.description }}" align="top" image="{{ hashtag.cover }}" url="/pages/hashtags/detail?hid={{ hashtag.hid }}" hover>
     <view slot="note">
-        <t-button size="extra-small" variant="{{ hashtag.interaction.followStatus ? '' : 'outline' }}" content="{{ hashtag.interaction.followStatus ? '已' : '' }}{{ hashtag.interaction.followName }}" bind:tap="onClickHashtagFollow" data-hid="{{ hashtag.hid }}"/>
+        <t-button size="extra-small" variant="{{ hashtag.interaction.followStatus ? '' : 'outline' }}" content="{{ hashtag.interaction.followStatus ? modifierCompleted : '' }}{{ hashtag.interaction.followName }}" bind:tap="onClickHashtagFollow" data-hid="{{ hashtag.hid }}"/>
     </view>
 </t-cell>
