--- a/pages/posts/detail.wxml
+++ b/pages/posts/detail.wxml
@@ -4,6 +4,13 @@
     Licensed under the Apache-2.0 license
 * -->
 <view class="page" data-weui-theme="{{ theme }}">
+    <t-navbar title="{{ postDetailTitle }}">
+        <view slot="capsule" class="custom-capsule">
+            <t-icon size="20" bind:tap="onFresnsBack" aria-role="button" aria-label="返回" name="chevron-left" class="custom-capsule__icon"/>
+            <t-icon size="20" bind:tap="onFresnsGoHome" aria-role="button" aria-label="首页" name="home" class="custom-capsule__icon"/>
+        </view>
+    </t-navbar>
+
     <!--帖子详情-->
     <loading status="{{ loadingDetailStatus }}" tipType="none"></loading>
     <block wx:if="{{ post }}">
