--- a/pages/profile/posts.wxss
+++ b/pages/profile/posts.wxss
@@ -4,3 +4,27 @@
  * Licensed under the Apache-2.0 license
  */
 @import '/assets/styles/profile.wxss';
+
+.custom-capsule {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-capsule__icon {
+  flex: 1;
+  position: relative;
+}
+
+.custom-capsule__icon + .custom-capsule__icon:before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: -1px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 1px;
+  height: 36rpx;
+  background: #e7e7e7;
+}
