feat: client name

--- a/pages/portal/about.wxml
+++ b/pages/portal/about.wxml
@@ -62,7 +62,7 @@
     </view>
 
     <view class="client-version">
-        <text>客户端版本 v{{ clientVersion }}</text>
+        <text>客户端版本 {{ clientName }} v{{ clientVersion }}</text>
     </view>
 
     <!-- 隐私授权 -->
